petal_core/src/snapshots/petal_core__parser__tests__binary_associativity-3.snap
---
source: petal_core/src/parser.rs
expression: "parse_expr(\"a ^ b ^ c\")"
---
(
    [
        Identifier {
            name: "a",
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        0,
                    ),
                ),
            },
            symbol_id: None,
        },
    ],
    [
        ExprNode {
            expr: Ident(
                IdentId(
                    1v1,
                ),
            ),
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        0,
                    ),
                ),
            },
        },
    ],
)
