petal_core/src/snapshots/petal_core__parser__tests__binary_prec-4.snap
---
source: petal_core/src/parser.rs
expression: "parse_expr(\"1 ^ 2\")"
---
(
    [],
    [
        ExprNode {
            expr: Integer(
                1,
            ),
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        0,
                    ),
                ),
            },
        },
    ],
)
