petal_core/src/snapshots/petal_core__parser__tests__calls-4.snap
---
source: petal_core/src/parser.rs
expression: "parse_expr(\"a(b)(c)\")"
---
(
    [
        Identifier {
            name: "a",
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        0,
                    ),
                ),
            },
            symbol_id: None,
        },
        Identifier {
            name: "b",
            span: Span {
                start: Pos(
                    2,
                ),
                end: Some(
                    Pos(
                        2,
                    ),
                ),
            },
            symbol_id: None,
        },
        Identifier {
            name: "c",
            span: Span {
                start: Pos(
                    5,
                ),
                end: Some(
                    Pos(
                        5,
                    ),
                ),
            },
            symbol_id: None,
        },
    ],
    [
        ExprNode {
            expr: Ident(
                IdentId(
                    1v1,
                ),
            ),
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        0,
                    ),
                ),
            },
        },
        ExprNode {
            expr: Ident(
                IdentId(
                    2v1,
                ),
            ),
            span: Span {
                start: Pos(
                    2,
                ),
                end: Some(
                    Pos(
                        2,
                    ),
                ),
            },
        },
        ExprNode {
            expr: Call {
                callee: ExprId(
                    1v1,
                ),
                args: [
                    ExprId(
                        2v1,
                    ),
                ],
            },
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        3,
                    ),
                ),
            },
        },
        ExprNode {
            expr: Ident(
                IdentId(
                    3v1,
                ),
            ),
            span: Span {
                start: Pos(
                    5,
                ),
                end: Some(
                    Pos(
                        5,
                    ),
                ),
            },
        },
        ExprNode {
            expr: Call {
                callee: ExprId(
                    3v1,
                ),
                args: [
                    ExprId(
                        4v1,
                    ),
                ],
            },
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        6,
                    ),
                ),
            },
        },
    ],
)
