petal_core/src/snapshots/petal_core__parser__tests__comments.snap
---
source: petal_core/src/parser.rs
expression: "parse_stmt(\"# let x = 1\")"
---
(
    [],
    [],
    [],
    [],
    [],
)
